# Lupine-Game-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
include/lupine/: Engine.h
lupine-core/: CMakeLists.txt
lupine-core/include/lupine/: Lupine.h
lupine-core/include/lupine/animation/: AutokeySystem.h
lupine-core/include/lupine/components/: AnimatedSprite2D.h  AnimatedSprite3D.h  AnimationPlayer.h  Area2D.h  AudioSource.h  KinematicBody3D.h  Label.h  PlayerController2D.h  PlayerController3D.h  RigidBody2D.h  SkinnedMesh.h  Skybox3D.h  SpotLight.h  Sprite2D.h  Sprite3D.h  StateAnimator.h  StaticMesh.h  TerrainLoader.h  Tilemap25D.h
lupine-core/include/lupine/core/: Component.h  Engine.h  Project.h
lupine-core/include/lupine/export/: AssetBundler.h  EmbeddedLibraryManager.h  ExportManager.h  LinuxExporter.h  MacExporter.h  WebExporter.h  WindowsExporter.h
lupine-core/include/lupine/input/: InputConstants.h  InputManager.h
lupine-core/include/lupine/rendering/: DebugRenderer.h  GraphicsBuffer.h  GraphicsDevice.h  GraphicsShader.h  GraphicsVertexArray.h  GridRenderer.h  LightingSystem.h  OpenGLDevice.h  OpenGLTexture.h  OpenGLVertexArray.h  Renderer.h  TextRenderer.h  WebGLBuffer.h  WebGLVertexArray.h
lupine-core/include/lupine/resources/: AnimationResource.h  MeshLoader.h  ResourceManager.h  StateMachineResource.h  Tileset3DResource.h
lupine-core/include/lupine/scriptableobjects/: ScriptableObjectInstance.h  ScriptableObjectManager.h  ScriptableObjectTemplate.h
lupine-core/include/lupine/scripting/: LuaScriptComponent.h  PythonScriptComponent.h
lupine-core/include/lupine/serialization/: JsonUtils.h  ProjectSerializer.h  SceneSerializer.h  SerializationUtils.h
lupine-core/include/lupine/terrain/: TerrainBrush.h  TerrainFileFormat.h
lupine-core/include/lupine/tilemap/: TilemapData.h
lupine-core/include/lupine/ui/: LupineUI.h
lupine-core/include/lupine/ui/Widgets/: Label.h  Widget.h
lupine-core/include/lupine/visualscripting/: CodeGenerator.h  VScriptConnection.h  VScriptNode.h  VScriptNodeTypes.h
lupine-core/src/animation/: PropertyStateManager.cpp  PropertySystem.cpp
lupine-core/src/components/: AnimatedSprite2D.cpp  AnimatedSprite3D.cpp  AnimationPlayer.cpp  Animator.cpp  Area3D.cpp  AudioSource.cpp  Button.cpp  Camera2D.cpp  Camera3D.cpp  CollisionMesh3D.cpp  ColorRectangle.cpp  DirectionalLight.cpp  KinematicBody2D.cpp  KinematicBody3D.cpp  Label.cpp  NinePatchPanel.cpp  OmniLight.cpp  Panel.cpp  PlayerController25D.cpp  PlayerController2D.cpp  PlayerController3D.cpp  PrimitiveMesh.cpp  ProgressBar.cpp  RigidBody3D.cpp  Skybox3D.cpp  SpotLight.cpp  Sprite2D.cpp  Sprite3D.cpp  StateAnimator.cpp  StaticMesh.cpp  TerrainCollider.cpp  TerrainRenderer.cpp  TextureRectangle.cpp  Tilemap25D.cpp  Tilemap2D.cpp
lupine-core/src/core/: Engine.cpp  GlobalsManager.cpp  Node.cpp  UUID.cpp
lupine-core/src/input/: InputManager.cpp
lupine-core/src/localization/: LocalizationManager.cpp
lupine-core/src/nodes/: Control.cpp  Node2D.cpp
lupine-core/src/physics/: PhysicsManager.cpp
lupine-core/src/rendering/: Camera.cpp  GraphicsDeviceFactory.cpp  GridRenderer.cpp  LightingSystem.cpp  OpenGLBuffer.cpp  OpenGLDevice.cpp  OpenGLVertexArray.cpp  Renderer.cpp  ShaderManager.cpp  TextRenderer.cpp  WebGLBuffer.cpp  WebGLVertexArray.cpp
lupine-core/src/resources/: Tileset3DResource.cpp
lupine-core/src/scriptableobjects/: ScriptableObjectManager.cpp  ScriptableObjectTemplate.cpp
lupine-core/src/scripting/: VisualScriptComponent.cpp
lupine-core/src/serialization/: ProjectSerializer.cpp  SceneSerializer.cpp  SerializationUtils.cpp
lupine-core/src/terrain/: AssetScatterBrush.cpp  TerrainBrush.cpp  TerrainData.cpp  TextureBrush.cpp
lupine-core/src/tilemap/: TilemapData.cpp
lupine-core/src/visualscripting/: CodeGenerator.cpp  VScriptConnection.cpp  VScriptNode.cpp  VScriptNodeTypes.cpp
lupine-engine/: CMakeLists.txt  lupine-editor.desktop.in
lupine-engine/include/lupine/editor/: TileBuilderDialog.h
lupine-engine/src/editor/: AssetListView.cpp  AssetListView.h  AssetPreviewModel.h  AssetTagManager.h  EditorClipboard.h  EditorUndoSystem.cpp  MainWindow.cpp  MainWindow.h  PlacementMode.h  SyntaxHighlighters.cpp  TileBuilderDialog.cpp  TileOBJExporter.cpp  TilePrimitiveMeshGenerator.cpp  TileTextureTemplateGenerator.cpp  main.cpp  qt_static_plugins.cpp
lupine-engine/src/editor/dialogs/: AddComponentDialog.cpp  AddNodeDialog.cpp  AddNodeDialog.h  AssetProgressTrackerDialog.cpp  AudioMixerDialog.cpp  ExportDialog.cpp  ExportDialog.h  FeatureBugTrackerDialog.cpp  FeatureBugTrackerDialog.h  GlobalsManagerDialog.cpp  GlobalsManagerDialog.h  GraphCanvasWidget.cpp  GraphCanvasWidget.h  LocalizationSettingsDialog.cpp  LocalizationTablesDialog.cpp  MenuBuilderDialog.cpp  MenuSceneView.cpp  MenuSceneView.h  MilestoneTrackerDialog.cpp  MilestoneTrackerDialog.h  NodeSelectionDialog.h  NotepadDialog.cpp  NotepadDialog.h  PixelPainterDialog.h  ScribblerDialog.h  SpriteAnimatorDialog.cpp  SpriteAnimatorDialog.h  StateAnimatorDialog.h  TerrainPainterDialog.cpp  TerrainPainterDialog.h  Tilemap25DPainterDialog.cpp  Tilemap25DPainterDialog.cpp~  Tilemap25DPainterDialog.h  TilemapPainterDialog.h  TilesetEditorDialog.h  TodoListDialog.cpp  TweenAnimatorDialog.h~  VisualScripterDialog.h
lupine-engine/src/editor/panels/: AssetBrowserPanel.cpp  AssetBrowserPanel.h  ConsolePanel.cpp  ConsolePanel.h  FileBrowserPanel.cpp  InspectorPanel.cpp  InspectorPanel.h  SceneTreePanel.cpp  SceneViewPanel.cpp  ScriptEditorPanel.cpp
lupine-engine/src/editor/rendering/: GizmoRenderer.h
lupine-engine/src/editor/resources/: editor.qrc
lupine-engine/src/editor/widgets/: GameRunnerToolbar.h  PropertyEditorWidget.cpp  PropertyEditorWidget.h
lupine-engine/src/export/: EmbeddedLibraryManager.cpp  ExportManager.cpp  MacExporter.cpp  WindowsExporter.cpp
lupine-engine/src/export/web/: WebRuntimeMain.cpp  WebScriptBridge.cpp  WebScriptBridge.h
lupine-runtime/: CMakeLists.txt  lupine-runtime.desktop.in
lupine-runtime/src/runtime/resources/: lupine-runtime.rc
(+282 files in other folders)
